# Qwenzie

./: .env  .example.env  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
prisma/: schema.prisma
src/: app.py  config.py
src/cogs/: __init__.py  admin.py  events.py  ticket.py  utils.py
src/cogs/commands/: admin.py  ticket.py  utils.py
src/cogs/events/: client.py
src/core/: bot.py
src/tools/: ansi_configs.py  default_view.py
src/tools/tickets/: create_pannel.py
src/tools/view/: admin_pannel.py  basic.py  create_pannel.py
src/tools/views/: panel.py
src/utils/: logger.py
