[tool.poetry]
name = "mims"
version = "0.1.0"
description = "a minimal discord ticket bot with a pannel system."
authors = ["samarth3301 <samarplayz1337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
jishaku = "^2.5.2"
prisma = "^0.13.1"
colorlog = "^6.8.2"
pynacl = "^1.5.0"
logging = "^0.4.9.6"

[tool.prisma]
binary_cache_dir = '.binaries'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
